Update .gitignore to include Airflow and Docker related files

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,13 @@ raw_data/
 .env
 .python-version
 notebooks/
+
+# Airflow
+airflow/logs/
+airflow/dags/
+airflow/plugins/
+airflow/config/
+
+# Docker related files
+docker-compose.yaml
+Dockerfile
